Removed Java PermSize options from scrips as there were no longer supported in Java 8.