@@ -3,7 +3,7 @@ ProgDir=`dirname "$0"`
 . "${ProgDir}/env.sh"
 
 if [ -z "${JAVA_OPTS}" ]; then
-  JAVA_OPTS="-Xms256m -Xmx1024m -XX:PermSize=64M -XX:MaxPermSize=256M"
+  JAVA_OPTS="-Xms256m -Xmx1024m"
 fi
 
 cd ${assembly.home.env.name.ref}
